Add AI agent integration with conversation management and MCP tooling